src/test/deca/context/invalid/operation-unaire-not-wrong.deca
// Description:
//    Test 3.37 fail avec not 
//
// Resultats:
//    Ligne 11: Un not ne peut se faire qu'avec des booleens.
//
// Historique:
//    cree le 06/01/2023

{
    !"hello world";
}